<resources>
    <string name="app_name">Shopping Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_price">Item Price</string>
    <string name="item_priority_1_5">Item Priority (1–5)</string>
    <string name="cancel">Cancel</string>
    <string name="shop">Shop</string>
    <string name="budget">Budget</string>
    <string name="enter_budget">Enter your shopping budget</string>
    <string name="add">Add</string>
    <string name="buy">Buy Items</string>
    <string name="shopping_results">Shopping Results</string>
    <string name="close">Close</string>
    <string name="fields_required">All fields are required!</string>
    <string name="list_empty">Your list is empty. Please press the add button to add an item to your list.</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="amount_spent">Amount Spent:</string>
    <string name="budget_remaining">Budget Remaining:</string>
    <string name="unpurchasedMessage">Any unpurchased items are still in your shopping list.</string>
</resources>
